tests/NormalTests/paczka1/small_fuzzy/14379840.err
Error in line 3: f06 S391 96,2
Error in line 14: f06 A81 -2,3
Error in line 11: jkHHRHsu A81 39,5
